--- a/index.html
+++ b/index.html
@@ -611,6 +611,12 @@ themeToggle.addEventListener('click', () => {
 const DATA_URL = './portfolio-data.json';
 let DATA = null;
 
+function hideLoader(){
+  const l = document.getElementById('loader');
+  if(l){ l.style.opacity='0'; l.style.visibility='hidden'; setTimeout(function(){ if(l.parentNode) l.parentNode.removeChild(l); },500); }
+  initReveal();
+}
+
 async function loadData(){
   try{
     const res = await fetch(DATA_URL + '?v=' + Date.now());
